@@ -48,6 +48,7 @@ public class Options implements PlugIn {
 			gd.addCheckbox("Save window locations", !Prefs.doNotSaveWindowLocations);
 		gd.addCheckbox("Non-blocking filter dialogs", Prefs.nonBlockingFilterDialogs);
 		gd.addCheckbox("Debug mode", IJ.debugMode);
+		//gd.addCheckbox("Modern mode", Prefs.modernMode);
 		gd.addHelp(IJ.URL+"/docs/menus/edit.html#misc");
 		gd.showDialog();
 		if (gd.wasCanceled())
@@ -62,7 +63,7 @@ public class Options implements PlugIn {
 			FloatBlitter.divideByZeroValue = Float.MAX_VALUE;
 		else {
 			Float f;
-			try {f = new Float(divValue);}
+			try {f = Float.valueOf(divValue);}
 			catch (NumberFormatException e) {f = null;}
 			if (f!=null)
 				FloatBlitter.divideByZeroValue = f.floatValue();
@@ -83,6 +84,7 @@ public class Options implements PlugIn {
 			Prefs.doNotSaveWindowLocations = !gd.getNextBoolean();
 		Prefs.nonBlockingFilterDialogs = gd.getNextBoolean();
 		IJ.setDebugMode(gd.getNextBoolean());
+		//Prefs.modernMode = gd.getNextBoolean();
 	}
 
 	void lineWidth() {
